# tauri-solid-db-template

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: app.scss  app.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240608180000_setup.down.sql  20240608180000_setup.up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: greetings.rs  mod.rs
src/components/: tech-logo.scss  tech-logo.tsx
src/layouts/: main-layout.tsx
src/routes/: home.tsx  not-found.tsx
