[package]
name = "tauri-solid-db-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-sql = { version = "2.0.0-beta", features  = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
include_dir = "0.7.3"
