[package]
name = "tauri-solid-db-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["specta"] }
tauri-plugin-shell = "2.0.0-beta"

tauri-plugin-sql = { version = "2.0.0-beta", features  = ["sqlite"] }
sqlx = { version = "0.7.4", features = ["chrono"] }

tauri-specta = { version = "2.0.0-rc", features = ["javascript", "typescript"] }
specta = { version = "2.0.0-rc", features = ["chrono"] }

chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
human-errors = "0.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19.0"
